--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 @import url("styles/banner.css");
 @import url("styles/carrossel.css");
 @import url("styles/topicos.css");
-@import url(styles/contato.css);
-@import url(styles/rodapé.css);
+@import url("styles/contato.css");
+@import url("styles/rodapé.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
