--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -10,7 +10,7 @@
     margin-bottom: 1em;
 }
 
-.tópicos__listas {
+.tópicos__lista {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -36,6 +36,13 @@
 
     .tópicos__link {
         font-size: 24px;
+    }
+    
+}
+
+@media screen and (min-width: 1728px) {
+    .tópicos {
+        padding: 3em 30vw;
     }
     
 }
